--- a/code/05_figures-and-correlations.rmd
+++ b/code/05_figures-and-correlations.rmd
@@ -141,39 +141,18 @@ Figure 2. Simulated $I^2$  densities across 67 meta-analyses for zero, small, me
 ## Figure 3: correlations per effect type
 
 ```{r corr_per_effect_type-prep}
-#Each set of input datapoints is meta-analyzed as per the original replication project
-#Then correlated with tau2 per effect type
+
 #Function 'est_heterogen_smd_raw' is sourced, see also tables.rmd
-tau2_per_type <- dat %>% 
+tau2_per_type <- dat %>% #First compute meta-analytic results for all effects (will save: SMDs results)
   split(.$effect) %>%  
-  map_dfr(est_heterogen_smd_raw, .id = "effect")
-
-MD_fit <- function(x){
-    fit <- rma(measure = "SMD", m1i = outcome_t1, m2i = outcome_c1, sd1i = outcome_t2, sd2i = outcome_c2, n1i = ntreatment, n2i = ncontrol, data = x)
-    hetero <- confint(fit)$random[c(1, 3), ] 
-    data.frame(eff_size = fit$b[[1]], #effect size (point estimate) 
-             s_I2 = hetero[2, 1], s_ci.lb = hetero[2, 2], s_ci.ub = hetero[2, 3],
-             tau2 = hetero[1, 1], tau2_ci.lb = hetero[1, 2], tau2_ci.ub = hetero[1, 3],
-             H2trunc = fit$H2, H2 = fit$QE / (fit$k - 1))
-}
-
-
-log_or_fit <- function(x){ #NB! if a cell is 0, 1/2 will be added to it
-    fit <- rma(measure = "OR", ai = outcome_t1, bi = outcome_t2, ci = outcome_c1, di = outcome_c2, n1i = ntreatment, n2i = ncontrol,  data = x)
-    hetero <- confint(fit)$random[c(1, 3), ] 
-    data.frame(eff_size = fit$b[[1]], #effect size (point estimate) 
-             s_I2 = hetero[2, 1], s_ci.lb = hetero[2, 2], s_ci.ub = hetero[2, 3],
-             tau2 = hetero[1, 1], tau2_ci.lb = hetero[1, 2], tau2_ci.ub = hetero[1, 3],
-             H2trunc = fit$H2, H2 = fit$QE / (fit$k - 1))
-}
-
+  map_dfr(est_heterogen_smd_raw, .id = "effect") 
 
 
 #Raw mean differences to SMD
 MD_standardized <- dat %>% 
-  filter(outcomes1_2 == "mean _ SD") %>% #Note, drops Mean _ SE study since no method in metafor to convert into standardized mean differences
+  filter(outcomes1_2 == "mean _ SD") %>% #Note, drops Mean _ SE studies (two) since no method in metafor to convert into standardized mean differences
   split(.$effect) %>% 
-  map_dfr(MD_fit, .id = "effect")
+  map_dfr(MD_fit, .id = "effect") #MD_fit function is sourced
 
 #effects that were originally transformed from OR to SMD by ML1 which we refit as OR
 OR2d <- c('Allowed vs. forbidden', 'Gain vs. loss framing', 
@@ -188,11 +167,10 @@ rd_effects <- c("Verbal overshadowing 1", "Verbal overshadowing 2")
 log_odds_ratios <- dat %>% 
   filter(effect %in% c(OR2d, ml2_or, rd_effects)) %>% 
   split(.$effect) %>% 
-  map_dfr(log_or_fit, .id = "effect")
+  map_dfr(log_or_fit, .id = "effect") #log_or_fit function is sourced
 
-#One with NA values: ML2; Trolley dilemma 1; Site = 'cas'
 
-tau2_per_type <- dat %>% #This is to add the effect_type names
+tau_per_type <- dat %>% #This is to add the effect_type names
   select(effect, effect_type) %>% 
   distinct() %>% #get unique rows
   mutate(effect_type = recode(effect_type, 
@@ -203,63 +181,20 @@ tau2_per_type <- dat %>% #This is to add the effect_type names
   bind_rows(log_odds_ratios) %>% #add odds ratios
   mutate(effect_type = ifelse(effect %in% MD_standardized$effect, "Standardized Mean Difference", effect_type),
          effect_type = ifelse(effect %in% log_odds_ratios$effect, "Log Odds Ratio", effect_type),
-         eff_size = abs(eff_size)) %>% #need the absolute values for plotting
+         eff_size = abs(eff_size), #need the absolute values for plotting
+         tau = sqrt(tau2)) %>% 
   filter(effect_type %in% c("Standardized Mean Difference", "Log Odds Ratio"))
 
 
-#labels for figure 3----
-fitter <- function(df){  #function to fit correlations for annotating facet plots
- fit_tau2 <- summary(lm(tau2 ~ eff_size, data = df))
- fit_I2 <- summary(lm(s_I2 ~ eff_size, data = df))
- fit_H2 <- summary(lm(H2 ~ eff_size, data = df))
- r <- c(sqrt(fit_tau2$r.squared), sqrt(fit_I2$r.squared), sqrt(fit_H2$r.squared))
- data.frame(r = format(round(r, digits = 2), nsmall = 2),
-            index = c("tau2", "I2", "H2")) 
-}
-
-
-#functions to estimate bootstrapped confidence intervals to add to plot correlations
-pear_tau2 <- function(formula, data, indices){ #pearson
-     d <- data[indices,]
-     fit <- cor.test(formula = ~ tau2 + eff_size, data=d)
-     return(fit$estimate)
-}
-pear_I2 <- function(formula, data, indices){ #pearson
-     d <- data[indices,]
-     fit <- cor.test(formula = ~ s_I2 + eff_size, data=d)
-     return(fit$estimate)
-}
-pear_H2 <- function(formula, data, indices){ #pearson
-     d <- data[indices,]
-     fit <- cor.test(formula = ~ H2 + eff_size, data=d)
-     return(fit$estimate)
-}
-
-bootfitter <- function(x){ #function that computes the bootstrapped confidence intervals using above functions to annotate plots
-  bootfit <- boot(data=x, statistic=pear_tau2, R=1000, formula= ~ eff_size + tau2)
-  tau2_ci_pears <- boot.ci(bootfit, type="perc")
-  bootfit <- boot(data=x, statistic=pear_I2, R=1000, formula= ~ eff_size + s_I2)
-  I2_ci_pears <- boot.ci(bootfit, type="perc")
-  bootfit <- boot(data=x, statistic=pear_H2, R=1000, formula= ~ eff_size + H2)
-  H2_ci_pears <- boot.ci(bootfit, type="perc")
-
-  ci.lb <- c(tau2_ci_pears$percent[4], I2_ci_pears$percent[4], H2_ci_pears$percent[4])
-  ci.ub <- c(tau2_ci_pears$percent[5], I2_ci_pears$percent[5], H2_ci_pears$percent[5])
-
-  ci <- paste0("[", format(round(ci.lb, 2), nsmall = 2), ", ",
-       format(round(ci.ub, 2), nsmall = 2), "]")#percentile 
-  data.frame(ci, index = c("tau2", "I2", "H2"))
-}
-
+#lables
 set.seed(435) #for the bootstrapping
-fig3_ci <- tau2_per_type %>% 
+fig3_ci <- tau_per_type %>% 
   split(.$effect_type) %>% 
-  map_dfr(bootfitter, .id = "effect_type")
+  map_dfr(bootfitter, .id = "effect_type") #bootfitter is a sourced function
 
-
-labels <- tau2_per_type %>% #row 1:2 = tau2, row 3:4 = I2, row 5:6 = H2
+labels <- tau_per_type %>% #row 1:2 = tau2, row 3:4 = I2, row 5:6 = H2
   split(.$effect_type) %>% 
-  map_dfr(fitter, .id = "effect_type") %>%
+  map_dfr(fitter, .id = "effect_type") %>% #fitter is a sourced function
   mutate(lab = paste0("r = ", r, " ", fig3_ci$ci)) #put output into one variable for improved plotting
 
 
@@ -268,10 +203,10 @@ labels <- tau2_per_type %>% #row 1:2 = tau2, row 3:4 = I2, row 5:6 = H2
 
 ```{r corr_per_effect_type-plot, cache = FALSE}
 #tau plot----
-tau_facet <- ggplot(tau2_per_type, aes(x = eff_size, y = sqrt(tau2))) + #NB! Taking sqrt of tau2 here
+tau_facet <- ggplot(tau_per_type, aes(x = eff_size, y = tau)) + 
   geom_point(alpha = 0.5) +
   geom_smooth(method = "lm", se = FALSE, color = "black") + #to set alpha for the line geom_line must be used rather than geom_smooth
-  geom_text(data = labels[labels$index == "tau2",], aes(label = lab), x = -Inf, y = Inf, hjust = -0.1, vjust = 2, size = 3.5, fontface = "italic", alpha = .6) + #hjust and vjust can be used to annotate the same position in all facets even though the scale are different
+  geom_text(data = labels[labels$index == "tau",], aes(label = lab), x = -Inf, y = Inf, hjust = -0.05, vjust = 2, size = 3.5, fontface = "italic", alpha = .6) + #hjust and vjust can be used to annotate the same position in all facets even though the scale are different
   scale_y_continuous(name = expression(paste("Between Studies Standard Deviation ", italic(tau)))) +
   scale_x_continuous(name = "Absolute Effect Size") +
   theme_classic() +
@@ -282,10 +217,10 @@ tau_facet <- ggplot(tau2_per_type, aes(x = eff_size, y = sqrt(tau2))) + #NB! Tak
   facet_wrap(~effect_type, nrow = 2, scales = "free") #use free scales since scales are different
 
 #I2plot----
-I2_facet <- ggplot(tau2_per_type, aes(x = eff_size, y = s_I2)) + 
+I2_facet <- ggplot(tau_per_type, aes(x = eff_size, y = s_I2)) + 
   geom_point(alpha = 0.5) +
   geom_smooth(method = "lm", se = FALSE, color = "black") + #to set alpha for the line geom_line must be used rather than geom_smooth
-  geom_text(data = labels[labels$index == "I2",], aes(label = lab), x = -Inf, y = Inf, hjust = -0.1, vjust = 2, size = 3.5, fontface = "italic", alpha = .6) + #hjust and vjust can be used to annotate the same position in all facets even though the scale are different
+  geom_text(data = labels[labels$index == "I2",], aes(label = lab), x = -Inf, y = Inf, hjust = -0.05, vjust = 2, size = 3.5, fontface = "italic", alpha = .6) + #hjust and vjust can be used to annotate the same position in all facets even though the scale are different
   scale_y_continuous(name = expression(paste(italic(I)^2, " Index"))) +
   scale_x_continuous(name = "Absolute Effect Size") +
   coord_cartesian(ylim = c(0, 100)) +
@@ -297,10 +232,10 @@ I2_facet <- ggplot(tau2_per_type, aes(x = eff_size, y = s_I2)) +
   facet_wrap(~effect_type, nrow = 2, scales = "free") #use free scales since scales are different
 
 #H2plot----
-H2_facet <- ggplot(tau2_per_type, aes(x = eff_size, y = H2)) + 
+H2_facet <- ggplot(tau_per_type, aes(x = eff_size, y = H2)) + 
   geom_point(alpha = 0.5) +
   geom_smooth(method = "lm", se = FALSE, color = "black") + #to set alpha for the line geom_line must be used rather than geom_smooth
-  geom_text(data = labels[labels$index == "H2",], aes(label = lab), x = -Inf, y = Inf, hjust = -0.1, vjust = 2, size = 3.5, fontface = "italic", alpha = .6) + #hjust and vjust can be used to annotate the same position in all facets even though the scale are different
+  geom_text(data = labels[labels$index == "H2",], aes(label = lab), x = -Inf, y = Inf, hjust = -0.05, vjust = 2, size = 3.5, fontface = "italic", alpha = .6) + #hjust and vjust can be used to annotate the same position in all facets even though the scale are different
   scale_y_continuous(name = expression(paste(italic(H)^2, " Index"))) +
   scale_x_continuous(name = "Absolute Effect Size") +
   theme_classic() +
@@ -321,11 +256,10 @@ Figure 3. The Pearson correlation between absolute effect size and A) $\hat{\tau
 
 ```{r cor_het_effect_size, results = "hide", cache=TRUE}
 
-#This section gives the correlations reported in the section 'Heterogeneity and effect sizes' in the main manuscript 
+#This section gives the correlations and values reported in the section 'Heterogeneity and effect sizes' in the main manuscript 
 
 #1. Standardized mean differences----
-SMDs <- tau2_per_type %>% filter(effect_type == "Standardized Mean Difference") %>% 
-  mutate(tau = sqrt(tau2))
+SMDs <- tau_per_type %>% filter(effect_type == "Standardized Mean Difference") 
 
 cor.test(SMDs$tau, SMDs$eff_size) #pearson tau2
 cor.test(SMDs$s_I2, SMDs$eff_size) #pearson I2
@@ -335,6 +269,10 @@ cor.test(SMDs$tau, SMDs$eff_size, method = "spearman") #spearman
 cor.test(SMDs$s_I2, SMDs$eff_size, method = "spearman") #spearman
 cor.test(SMDs$H2, SMDs$eff_size, method = "spearman") #spearman
 
+##When effect size == 0, what is average heterogeneity?
+mean(SMDs$tau[SMDs$eff_size < 0.05]) #for tau = 0.016
+mean(SMDs$s_I2[SMDs$eff_size < 0.05]) #I2 = 3.05
+mean(SMDs$H2[SMDs$eff_size < 0.05]) #H2 = 0.88
 
 ##Excluding anchoring effects
 dropped_anchoring <- SMDs %>%
@@ -345,60 +283,45 @@ cor.test(dropped_anchoring$s_I2, dropped_anchoring$eff_size) #pearson
 cor.test(dropped_anchoring$H2, dropped_anchoring$eff_size) #pearson
 
 #bootstrap confidence intervals
-#code by Amir Abdol
+#code contribution by Amir Abdol
 
 
 #1.1 I2 confidence intervals----
-pear <- function(formula, data, indices){ #pearson
-     d <- data[indices,]
-     fit <- cor.test(formula = ~ s_I2 + eff_size, data=d)
-     return(fit$estimate)
-}
 
-#bootfit <- boot(data=SMDs, statistic=pear, R=1000, formula= ~ eff_size + s_I2) #see Fig 3
+
+#bootfit <- boot(data=SMDs, statistic=pear_I2, R=1000, formula= ~ eff_size + s_I2) #see Fig 3
 #I2_ci_pears <- boot.ci(bootfit, type=c("perc", "bca")) #percentile and adjusted percental method (BCa)
 
 
 #Excluding anchoring effects
 set.seed(234)
-bootfit <- boot(data=dropped_anchoring, statistic=pear, R=1000, formula= ~ eff_size + s_I2)
+bootfit <- boot(data=dropped_anchoring, statistic=pear_I2, R=1000, formula= ~ eff_size + s_I2) #statistic function is sourced
 
 I2_dropped_ci_pears <- boot.ci(bootfit, type=c("perc", "bca")) #percentile and adjusted percental method (BCa)
 
-#1.2 Tau2 confidence intervals----
-pear <- function(formula, data, indices){
-     d <- data[indices,]
-     fit <- cor.test(formula = ~ tau + eff_size, data=d)
-     return(fit$estimate)
-}
+#1.2 Tau confidence intervals----
 
-# bootfit <- boot(data=tau2_per_type, statistic=pear, R=1000, formula= ~ eff_size + tau2) #see Fig 3
+# bootfit <- boot(data=tau_per_type, statistic=pear_tau, R=1000, formula= ~ eff_size + tau2) #see Fig 3
 # tau2_ci_pears <- boot.ci(bootfit, type=c("perc", "bca"))
 
 #Excluding anchoring effects
 cor.test(dropped_anchoring$tau2, dropped_anchoring$eff_size)
 
 set.seed(423)
-bootfit <- boot(data=dropped_anchoring, statistic=pear, R=1000, formula= ~ eff_size + tau)
+bootfit <- boot(data=dropped_anchoring, statistic=pear_tau, R=1000, formula= ~ eff_size + tau)
 tau_dropped_ci_pears <- boot.ci(bootfit, type=c("perc", "bca")) #percentile and adjusted percental method (BCa)
 
 
 #1.3 H2 confidence intervals----
-pear <- function(formula, data, indices){
-     d <- data[indices,]
-     fit <- cor.test(formula = ~ H2 + eff_size, data=d)
-     return(fit$estimate)
-}
-
 set.seed(342)
-bootfit <- boot(data=tau2_per_type, statistic=pear, R=1000, formula= ~ eff_size + H2)
+bootfit <- boot(data=tau_per_type, statistic=pear_H2, R=1000, formula= ~ eff_size + H2)
 H2_ci_pears <- boot.ci(bootfit, type=c("perc", "bca"))
 
 
 
 #1.4 spearman bootstrap CIs----
 #First for I2
-spear <- function(formula, data, indices){ #spearman
+spear_I2 <- function(formula, data, indices){ #spearman
      d <- data[indices,]
      fit <- cor.test(formula = ~ s_I2 + eff_size, data=d, method = "spearman")
      return(fit$estimate)
@@ -406,22 +329,16 @@ spear <- function(formula, data, indices){ #spearman
 
 set.seed(241)
 options(warn=-1)
-bootfit <- boot(data=tau2_per_type, statistic=spear, R=1000, formula= ~ eff_size + s_I2)
+bootfit <- boot(data=tau_per_type, statistic=spear_I2, R=1000, formula= ~ eff_size + s_I2)
 options(warn=0)
 
 I2_ci_spear <- boot.ci(bootfit, type=c("perc", "bca"))
 
 #Second for tau
-spear <- function(formula, data, indices){ #spearman
-     d <- data[indices,]
-     fit <- cor.test(formula = ~ tau + eff_size, data=d, method = "spearman")
-     return(fit$estimate)
-}
 
 set.seed(5233)
-tau2_per_type <- tau2_per_type %>% mutate(tau = sqrt(tau2))
 options(warn=-1)
-bootfit <- boot(data=tau2_per_type, statistic=spear, R=1000, formula= ~ eff_size + tau)
+bootfit <- boot(data=tau_per_type, statistic=spear_tau, R=1000, formula= ~ eff_size + tau)
 options(warn=0)
 
 tau_ci_spear <- boot.ci(bootfit, type=c("perc", "bca"))
